syntax = "proto3";

option go_package = "github.com/alesr/audiostrippersvc/proto.v1";

service AudioStripper {
    rpc ExtractAudio(stream VideoData) returns (stream AudioData);
}

// Message to represent chunks of video data being sent to the server.
message VideoData {
    string sample_rate = 1;
    bytes data = 2;
}

// Message to represent chunks of audio data being sent back to the client.
message AudioData {
    bytes data = 1;
}
